[CXO-9086] comments applied 3